[package]
authors = ["Alecto Irene Perez <perez.cs@pm.me>"]
description = "Provides a working directory abstraction as local state"
documentation = "https://docs.rs/working_dir/"
edition = "2021"
homepage = "https://github.com/codeinred/working_dir"
keywords = ["path", "paths", "filesystem", "fs", "working_dir"]
license = "MIT OR Apache-2.0"
name = "working_dir"
repository = "https://github.com/codeinred/working_dir.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
path_no_alloc = "0.1.1"
